<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headline_txt"
            android:text="Top Headline 설정"
            android:textSize="35sp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/language_setting_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="32sp"
            android:text="@string/select_country"
            android:layout_marginTop="48dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline_txt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_nation_btn"
            android:textSize="20sp"
            android:text="@string/select_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/language_setting_txt"
            app:layout_constraintTop_toTopOf="@id/language_setting_txt"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/interest_setting_txt"
            android:text="@string/resetting_interest"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/language_setting_txt"
            app:layout_constraintTop_toBottomOf="@id/language_setting_txt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/interest_setting_btn"
            android:text="@string/select_setting"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/interest_setting_txt"
            app:layout_constraintTop_toTopOf="@id/interest_setting_txt"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_setting_txt"
            android:text="검색 설정"
            android:textSize="35sp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/interest_setting_txt"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exclude_news_txt"
            android:text="@string/exclude_news_com"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="@id/language_setting_txt"
            app:layout_constraintTop_toBottomOf="@id/search_setting_txt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_exclude_news_com_btn"
            android:textSize="20sp"
            android:text="@string/edit"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/exclude_news_txt"
            app:layout_constraintTop_toTopOf="@id/exclude_news_txt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/search_news_company"
            android:text="검색할 신문사"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/exclude_news_txt"
            app:layout_constraintTop_toBottomOf="@id/exclude_news_txt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_search_new_com_btn"
            android:textSize="20sp"
            android:text="@string/edit"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/search_news_company"
            app:layout_constraintTop_toTopOf="@id/search_news_company"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sort_text_view"
            android:text="정렬 방식"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/search_news_company"
            app:layout_constraintTop_toBottomOf="@id/search_news_company"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_sort_btn"
            android:textSize="20sp"
            android:text="@string/edit"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/sort_text_view"
            app:layout_constraintTop_toTopOf="@id/sort_text_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>